test: ReservationTime 인수 테스트 추가